#tf-data-service Use ParallelTFRecordWriter to parallelize SnapshotStreamWriter.
PiperOrigin-RevId: 599934251

--- a/tensorflow/core/data/service/snapshot/BUILD
+++ b/tensorflow/core/data/service/snapshot/BUILD
@@ -128,6 +128,7 @@ cc_library(
         "@local_tsl//tsl/platform:errors",
         "@local_tsl//tsl/platform:path",
         "@local_tsl//tsl/platform:statusor",
+        "@local_tsl//tsl/profiler/lib:traceme",
     ],
 )
 
@@ -427,12 +428,14 @@ cc_library(
     compatible_with = get_compatible_with_portable(),
     deps = [
         ":file_utils",
+        ":parallel_tfrecord_writer",
         ":path_utils",
         ":utils",
         "//tensorflow/core:framework",
         "//tensorflow/core:protos_all_cc",
         "//tensorflow/core/data:snapshot_utils",
         "//tensorflow/core/data:utils",
+        "//tensorflow/core/data/service:byte_size",
         "//tensorflow/core/data/service:common",
         "//tensorflow/core/data/service:common_proto_cc",
         "//tensorflow/core/data/service:task_runner",
@@ -445,7 +448,7 @@ cc_library(
         "@local_tsl//tsl/platform:env",
         "@local_tsl//tsl/platform:mutex",
         "@local_tsl//tsl/platform:path",
-        "@local_tsl//tsl/platform:regexp",
+        "@local_tsl//tsl/platform:statusor",
         "@local_tsl//tsl/platform:thread_annotations",
         "@local_tsl//tsl/profiler/lib:traceme",
     ],
@@ -462,6 +465,7 @@ tf_cc_test(
         "//tensorflow/core:lib",
         "//tensorflow/core:test",
         "//tensorflow/core:test_main",
+        "//tensorflow/core/data/service:byte_size",
         "//tensorflow/core/data/service:common_proto_cc",
         "//tensorflow/core/data/service:task_runner",
         "//tensorflow/core/data/service:test_util",
@@ -479,14 +483,17 @@ tf_cc_test(
     size = "small",
     srcs = ["snapshot_stream_writer_test.cc"],
     deps = [
+        ":file_utils",
         ":path_utils",
         ":snapshot_stream_writer",
+        ":test_utils",
         "//tensorflow/core:framework",
         "//tensorflow/core:lib",
         "//tensorflow/core:test",
         "//tensorflow/core:test_main",
         "//tensorflow/core/data:snapshot_utils",
         "//tensorflow/core/data:standalone",
+        "//tensorflow/core/data/service:byte_size",
         "//tensorflow/core/data/service:common_proto_cc",
         "//tensorflow/core/data/service:task_runner",
         "//tensorflow/core/data/service:test_util",
@@ -511,9 +518,9 @@ cc_library(
         ":path_utils",
         ":snapshot_stream_writer",
         "//tensorflow/core:framework",
-        "//tensorflow/core:protos_all_cc",
         "//tensorflow/core/data:snapshot_utils",
         "//tensorflow/core/data:standalone",
+        "//tensorflow/core/data/service:byte_size",
         "//tensorflow/core/data/service:common_proto_cc",
         "//tensorflow/core/data/service:task_runner",
         "@com_google_absl//absl/container:flat_hash_set",
