Remove unused and add used headers and build targets
PiperOrigin-RevId: 600493452

--- a/tensorflow/lite/experimental/shlo/BUILD
+++ b/tensorflow/lite/experimental/shlo/BUILD
@@ -47,7 +47,7 @@ cc_library(
         ":shlo",
         "@com_google_absl//absl/log",
         "@com_google_absl//absl/log:check",
-        "@com_google_absl//absl/status",
+        "@com_google_absl//absl/types:span",
     ],
 )
 
