Integrate StableHLO Quantizer Static Range PTQ to TFLite Converter.
This change makes the following modifications to integrate StableHLO Quantizer into TFLite converter.

* **Enables quantization integration test for a simple jax dot_general model.** (`odml_coverage_test.py`)
* Passes `PyFunctionLibrary`, which enables calling python functions from the cpp layer, required for running the calibration step, all the way from `_pywrap_toco_api.TocoConvert()` to the `StaticRangePtqComponent`.
    * Naturally, `PyFunctionLibrary` is `nullptr` where the job is initiated from the cpp layer.
* Splits `AddConvertHloToTfPass` into two, pre-quantization passes (`AddPreQuantizationStableHloToTfPasses`) and post-quantization passes (`AddPostQuantizationStableHloToTfPasses`) and sticks the quantizer component in the middle.
    * The overall procedure before this change: `HloToTfPasses` -> `PreVariableFreezingTFToTFLConversionPasses` -> `FreezeVariables` -> `PostVariableFreezingTFToTFLConversionPasses`.
    * The overall procedure becomes:            `PreQuantizationStableHloToTfPasses` -> `StaticRangePtqComponent` -> `PostQuantizationStableHloToTfPasses` -> `PreVariableFreezingTFToTFLConversionPasses` -> `FreezeVariables` -> `PostVariableFreezingTFToTFLConversionPasses`.

PiperOrigin-RevId: 603261337

--- a/tensorflow/compiler/mlir/lite/python/BUILD
+++ b/tensorflow/compiler/mlir/lite/python/BUILD
@@ -23,10 +23,12 @@ cc_library(
     srcs = ["tf_tfl_flatbuffer_helpers.cc"],
     hdrs = ["tf_tfl_flatbuffer_helpers.h"],
     deps = [
+        "//tensorflow/cc/saved_model:loader",
         "//tensorflow/compiler/mlir/lite:common",
         "//tensorflow/compiler/mlir/lite:tensorflow_lite",
         "//tensorflow/compiler/mlir/lite:tf_to_tfl_flatbuffer",
         "//tensorflow/compiler/mlir/lite/quantization:quantization_config",
+        "//tensorflow/compiler/mlir/quantization/tensorflow/python:py_function_lib",
         "//tensorflow/compiler/mlir/tensorflow:tensorflow_ops",
         "//tensorflow/core:core_cpu_base",
         "//tensorflow/core:framework",
@@ -59,6 +61,7 @@ cc_library(
         ":tf_tfl_flatbuffer_helpers",
         "//tensorflow/compiler/mlir/lite:common",
         "//tensorflow/compiler/mlir/lite/quantization:quantization_config",
+        "//tensorflow/compiler/mlir/quantization/tensorflow/python:py_function_lib",
         "//tensorflow/compiler/mlir/tensorflow:import_model",
         "//tensorflow/compiler/mlir/tensorflow:mlir_roundtrip_flags",
         "//tensorflow/core:lib",
@@ -85,6 +88,7 @@ cc_library(
         "//tensorflow/compiler/mlir/lite:tensorflow_lite",
         "//tensorflow/compiler/mlir/lite:tf_to_tfl_flatbuffer",
         "//tensorflow/compiler/mlir/lite/quantization:quantization_config",
+        "//tensorflow/compiler/mlir/quantization/tensorflow/python:py_function_lib",
         "//tensorflow/compiler/mlir/tensorflow:mlir_roundtrip_flags",
         "//tensorflow/core:lib",
         "//tensorflow/core:protos_all_cc",
