Move `ConvertTFBroadcastTo` pattern from `prepare-tf` pass to `tfl-optimize` pass. This doesn't change any existing behavior, all the tests in the TF dialect have been moved to TFL dialect.
The benefit of moving this pattern is that this can target any outstanding `tfl.broadcast_to` ops that get created as a result of new optimizations. For example-  cl/599249441

PiperOrigin-RevId: 603268400

--- a/tensorflow/compiler/mlir/lite/BUILD
+++ b/tensorflow/compiler/mlir/lite/BUILD
@@ -452,14 +452,15 @@ cc_library(
         "utils/constant_utils.h",
     ],
     deps = [
-        "//tensorflow/compiler/mlir/tensorflow",
         "//tensorflow/compiler/mlir/tensorflow:mangling_util",
         "//tensorflow/compiler/mlir/tensorflow:tensorflow_attributes",
         "//tensorflow/core:protos_all_cc",
         "//tensorflow/core/platform:status",
+        "@com_google_absl//absl/status",
         "@llvm-project//mlir:ArithDialect",
         "@llvm-project//mlir:FuncDialect",
         "@llvm-project//mlir:IR",
+        "@llvm-project//mlir:Support",
         "@local_tsl//tsl/platform:statusor",
     ],
 )
@@ -754,6 +755,7 @@ cc_library(
         "transforms/passes.h",
     ],
     deps = [
+        ":constant_utils",
         ":convert_type",
         ":tensorflow_lite",
         ":tensorflow_lite_passes_inc_gen",
