--- a/ci/devinfra/docker_windows/Dockerfile
+++ b/ci/devinfra/docker_windows/Dockerfile
@@ -65,14 +65,6 @@ RUN [Net.ServicePointManager]::SecurityProtocol = [Net.SecurityProtocolType]::Tl
     $old_path = [Environment]::GetEnvironmentVariable(\"PATH\", \"Machine\"); \
     [Environment]::SetEnvironmentVariable(\"PATH\", $old_path + \";C:\msys64;C:\msys64\usr\bin\", \"Machine\");
 
-# Install Go 1.19.1
-RUN Invoke-WebRequest "https://go.dev/dl/go1.19.1.windows-amd64.msi" \
-        -OutFile C:/TEMP/go_install.msi -UseBasicParsing; \
-    Start-Process C:/TEMP/go_install.msi -ArgumentList "/quiet", "/log", "C:/TEMP/go_install_log.txt", \
-        "InstallAllUsers=1", "PrependPath=1" -wait; \
-    Remove-Item C:/TEMP/go_install.msi; \
-    Remove-Item C:/TEMP/go_install_log.txt
-
 # Install Python 3.
 RUN Invoke-WebRequest "https://www.python.org/ftp/python/3.10.4/python-3.10.4-amd64.exe" \
         -OutFile C:/TEMP/python_install.exe -UseBasicParsing; \
@@ -110,72 +102,6 @@ RUN Add-Type -AssemblyName "System.IO.Compression.FileSystem"; \
     $env:PATH = [Environment]::GetEnvironmentVariable('PATH', 'Machine'); \
     gcloud components install docker-credential-gcr kubectl gsutil;
 
-# Install cygwin and packages
-# Running a seperate ps1 file since when running inside a Dockerfile, it does
-# not work.
-COPY install/install_cygwin.ps1 c:/
-RUN c:/install_cygwin.ps1; \
-    $old_path = [Environment]::GetEnvironmentVariable(\"PATH\", \"Machine\"); \
-    [Environment]::SetEnvironmentVariable(\"PATH\", $old_path + \";C:\Cygwin64\bin\", \"Machine\");
-RUN Remove-Item c:/install_cygwin.ps1
-
-# Install Chocolatey and packages
-RUN Invoke-Expression ((New-Object Net.WebClient).DownloadString('https://chocolatey.org/install.ps1')); \
-    $env:PATH = [Environment]::GetEnvironmentVariable('PATH', 'Machine'); \
-    choco feature enable -n allowGlobalConfirmation; \
-    choco install 7zip; \
-    choco install 7zip.install; \
-    choco install 7zip.portable; \
-    choco install anaconda2 --version 5.0.1; \
-    choco install anaconda3 --version 5.0.1; \
-    choco install android-sdk --version 25.2.3.1; \
-    choco install AndroidStudio --version 3.0.1.0; \
-    choco install ant --version 1.10.1; \
-    choco install ccleaner; \
-    choco install chocolatey; \
-    choco install chocolatey-core.extension; \
-    choco install chocolatey-visualstudio.extension; \
-    choco install chocolatey-windowsupdate.extension; \
-    choco install cmake.install; \
-    choco install dotnetcore-sdk; \
-    choco install git; \
-    choco install git.install; \
-    choco install GoogleChrome; \
-    choco install gradle --version 4.4.1; \
-    choco install jdk8; \
-    choco install KB2533623; \
-    choco install KB2919355; \
-    choco install KB2919442; \
-    choco install KB2999226; \
-    choco install KB3033929; \
-    choco install KB3035131; \
-    choco install maven; \
-    choco install ninja; \
-    choco install nodejs --version 9.3.0; \
-    choco install nodejs.install --version 9.3.0; \
-    choco install nuget.commandline; \
-    choco install openjdk11; \
-    choco install peazip; \
-    choco install peazip.install; \
-    choco install peazip.portable; \
-    choco install php --version 7.2.0; \
-    choco install protoc --version 3.2.0; \
-    choco install ruby --version 2.5.0.1; \
-    choco install swig --version 3.0.9; \
-    choco install sysinternals; \
-    choco install unrar; \
-    choco install unzip; \
-    choco install vcredist140; \
-    choco install vcredist2015; \
-    choco install vim; \
-    choco install winrar; \
-    choco install zip; \
-    choco install Firefox; \
-    choco install iisexpress;
-
-RUN cmd /c 'mklink /J c:\Anaconda c:\tools\anaconda2';
-RUN cmd /c 'mklink c:\programdata\chocolatey\bin\rar.exe \"c:\program files\winrar\rar.exe\"';
-
 # Installing pip packages
 RUN pip install --upgrade setuptools; \
     pip install altgraph appdirs cachetools certifi cffi chardet colorama \
@@ -187,57 +113,8 @@ RUN pip install --upgrade setuptools; \
     simplegeneric six Tempita traitlets uritemplate urllib3 virtualenv wcwidth \
     wheel win-unicode-console;
 
-# Hardcoding Android license since I did not find any solution on accepting it
-# through the docker build command. If the licensing agreement changes, this 
-# will need to be updated as well.
-RUN New-Item -ItemType Directory -Path C:\Android\android-sdk\licenses; \
-    Set-Content -Path .\Android\android-sdk\licenses\android-sdk-license -Value "`n24333f8a63b6825ea9c5514f83c2829b004d1fee" -NoNewLine;
-
-# Add sdkmanager to PATH
-RUN $old_path = [Environment]::GetEnvironmentVariable(\"PATH\", \"Machine\"); \
-    [Environment]::SetEnvironmentVariable(\"PATH\", $old_path + \";C:\Android\android-sdk\tools\bin\", \"Machine\");
-
-# Install android packages
-RUN $env:PATH = [Environment]::GetEnvironmentVariable('PATH', 'Machine'); \
-    New-Item C:\Users\ContainerAdministrator\.android\repositories.cfg; \
-    sdkmanager 'ndk-bundle'; \
-    sdkmanager 'platforms;android-33'; \
-    sdkmanager 'add-ons;addon-google_apis-google-24'; \
-    sdkmanager 'cmake;3.10.2.4988404'; \
-    sdkmanager 'cmake;3.18.1'; \
-    sdkmanager 'cmake;3.22.1'; \
-    sdkmanager 'cmake;3.6.4111459'; \
-    sdkmanager 'emulator'; \
-    sdkmanager 'system-images;android-27;google_apis;x86'; \
-    sdkmanager 'sources;android-27'; \
-    sdkmanager 'extras;google;Android_Emulator_Hypervisor_Driver'; \
-    sdkmanager 'extras;google;auto'; \
-    sdkmanager 'extras;google;google_play_services'; \
-    sdkmanager 'extras;google;instantapps'; \
-    sdkmanager 'extras;google;m2repository'; \
-    sdkmanager 'extras;google;market_apk_expansion'; \
-    sdkmanager 'extras;google;market_licensing'; \
-    sdkmanager 'extras;google;simulators'; \
-    sdkmanager 'extras;google;usb_driver'; \
-    sdkmanager 'extras;google;webdriver'; \
-    sdkmanager 'extras;android;m2repository'; \
-    sdkmanager 'extras;intel;Hardware_Accelerated_Execution_Manager'; \
-    sdkmanager 'extras;m2repository;com;android;support;constraint;constraint-layout;1.0.0'; \
-    sdkmanager 'extras;m2repository;com;android;support;constraint;constraint-layout-solver;1.0.2'; \
-    sdkmanager 'patcher;v4'; \
-    sdkmanager 'ndk;25.1.8937393'; \
-    sdkmanager 'build-tools;27.0.3';
-
-# Install Scoop and packages
-RUN iex \"& {$(irm get.scoop.sh)} -RunAsAdmin\"; \
-    scoop install perl; \
-    scoop install bazel; \
-    scoop install cuda; \
-    scoop install azure-functions-core-tools; \
-    scoop install azure-cli;
-
 # Setting environment variables
-RUN [Environment]::SetEnvironmentVariable('CYGWIN', 'winsymlinks:native', 'Machine'); \
+RUN [Environment]::SetEnvironmentVariable('MSYS', 'winsymlinks:native', 'Machine'); \
     [Environment]::SetEnvironmentVariable('HOME', 'C:\Users\ContainerAdministrator\', 'Machine'); \
     [Environment]::SetEnvironmentVariable('HOMEDRIVE', 'C:', 'Machine'); \
     [Environment]::SetEnvironmentVariable('HOMEPATH', '\Users\ContainerAdministrator\', 'Machine'); \
@@ -249,8 +126,19 @@ RUN [Environment]::SetEnvironmentVariable('CYGWIN', 'winsymlinks:native', 'Machi
     [Environment]::SetEnvironmentVariable(\"PATH\", $old_path + \";C:\Program Files\CMake\bin\", \"Machine\");
 
 
+# Install bazelisk
+RUN Invoke-WebRequest "https://github.com/bazelbuild/bazelisk/releases/download/v1.17.0/bazelisk-windows-amd64.exe" \
+        -OutFile C:/msys64/usr/bin/bazel.exe -UseBasicParsing;
+
+# Get more tools
+RUN C:\msys64\usr\bin\pacman.exe -Syy --noconfirm rsync pv libopenssl
+
+# Maybe fix long path name problems...
+RUN fsutil 8dot3name set 0
+
 # Restore default shell for Windows containers.
 SHELL ["cmd.exe", "/s", "/c"]
 
 # Default to PowerShell if no other command specified.
 CMD ["powershell.exe", "-NoLogo", "-ExecutionPolicy", "Bypass"]
+
