--- a/ci/official/requirements_updater/requirements.in
+++ b/ci/official/requirements_updater/requirements.in
@@ -18,8 +18,8 @@ tblib == 2.0.0
 # Note that here we want the latest version that matches TF major.minor version
 # Note that we must use nightly here as these are used in nightly jobs
 # For release jobs, we will pin these on the release branch
-keras-nightly ~= 3.0.0.dev
-tb-nightly ~= 2.15.0.a
+keras ~= 2.16.0rc0
+tensorboard ~= 2.16.0
 
 # Test dependencies
 grpcio >= 1.24.3, < 2.0
